# myshell

./: ._mycat  CMakeLists.txt  README.md  mycat.file  wildcards.cpp
headers/: functions.h  helpers.h  pipeline.h  redir.h  variables.h  wildcards.h
sources/: functions.cpp  helpers.cpp  main.cpp  mia.cpp  mycp.cpp  mygrep.cpp  mymkdir.cpp  mymv.cpp  myrm.cpp  pipeline.cpp  redir.cpp  variables.cpp  wildcards.cpp
test/: mycp  mygrep  myls  mymkdir  mymv  myrm  myshell  myshell.cbp  one  three  two
